[gd_scene load_steps=8 format=3 uid="uid://b2u5axanv5coe"]

[ext_resource type="Texture2D" uid="uid://b40ykwmg7qc6g" path="res://assets/background.png" id="1_pcwrc"]
[ext_resource type="Script" uid="uid://cdmdgfcjeh34c" path="res://world.gd" id="1_qijed"]
[ext_resource type="PackedScene" uid="uid://dchh8cr7seadh" path="res://ballon.tscn" id="2_gktmo"]
[ext_resource type="PackedScene" uid="uid://btom07pplnwl2" path="res://saw_blade_telegraph.tscn" id="3_7lv80"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6gss4"]
size = Vector2(48, 181)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kqvcx"]
size = Vector2(230, 19.5)

[sub_resource type="LabelSettings" id="LabelSettings_bmhh5"]
line_spacing = 0.0
font_size = 8

[node name="World" type="Node2D"]
script = ExtResource("1_qijed")

[node name="BackGround" type="Sprite2D" parent="."]
texture = ExtResource("1_pcwrc")
centered = false
metadata/_edit_lock_ = true

[node name="Walls" type="StaticBody2D" parent="."]
visible = false
collision_mask = 0
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2(24, 90.5)
shape = SubResource("RectangleShape2D_6gss4")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2(297, 89)
shape = SubResource("RectangleShape2D_6gss4")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls"]
position = Vector2(161, -5)
shape = SubResource("RectangleShape2D_kqvcx")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Walls"]
position = Vector2(160, 186)
shape = SubResource("RectangleShape2D_kqvcx")

[node name="Ballon" parent="." instance=ExtResource("2_gktmo")]
position = Vector2(160, 88)

[node name="SawBladeTelegraph" parent="." instance=ExtResource("3_7lv80")]
position = Vector2(96, 64)

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="SpawnZone" type="ColorRect" parent="."]
offset_left = 64.0
offset_top = 24.0
offset_right = 256.0
offset_bottom = 160.0
color = Color(1, 0.0862745, 0.0862745, 0.2)

[node name="SawCountLabel" type="Label" parent="."]
offset_right = 48.0
offset_bottom = 32.0
text = "Baldes
0"
label_settings = SubResource("LabelSettings_bmhh5")
horizontal_alignment = 1
vertical_alignment = 1
